se rediseño el endpoint de config header y se añadio swagger
